fixing form response text overflow by adding wordbreak

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,7 @@ body {
     color: #c0c0c0; 
     text-align: center;
     padding: 5vh;
+    word-break: break-word;
 }
 
 .form-response a {
